Fix history navigation through anchors when the anchor loads were done by changing window.location.  Bug 297122, r=biesi, sr=jst, a=bsmedberg